# Automated-Transcription

./: app.py  file_tracker.py  pyproject.toml  replit.nix  tracked_files.json  transcription_manager.py  utils.py
